--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper Nanodegree 1293kansd 
+  uni: Udacity 12asdasdasd 
+  year: June, 2014 &mdash; January, 2015 12uikasfasf
   # awards:
-  # summary:
+  # summary:asdjsakndlaskdasd
